# consultas-medicas

./: .gitignore  B7.c  CMakeLists.txt  Funcões.h.md  Funções.c.md  README.md  Tasks  Teste_integracao_2  Teste_integracao_2.c  agendamento_teste.c  agendamento_teste2.c  cadastro.txt  consultas  consultas-medicas-mainC.rar  consultas.c  consultas.c.md  funcoes.c  funcoes.h  login_teste  login_teste.c  relatorio_teste.c  teste_medicos  teste_medicos.c  testeintegracao  testeintegracao.c  testeintegração.c
bibiotecas/: funcoes.h
source/: consultas  consultas.c  main.c  main.h  testeintegracao  testeintegracao.c
source/bibliotecas/: funcoes.c  funcoes.h
source/funcs/: agendar.c  buscar.c  cadastrar.c  medOUdia.c  reagendar.c
source/lib/: consultas.h  menu.h  paciente.h  structs.h  utilitarios.h
source/lib/tools/: consultas.c  menu.c  paciente.c  utilitarios.c
source/src/: main.c  main.h
source/src/funcs/: agendar.c  buscar.c  cadastrar.c  cancelar.c  medOUdia.c  reagendar.c
